Started to fix row-banner alignment issues
Using 'align-content' instead of 'justify-content'; I have no idea why this is now happening, but… whatever.

--- a/assets/css/_global/_components.scss
+++ b/assets/css/_global/_components.scss
@@ -26,7 +26,7 @@
     left: 0;
   }
   &.center {
-    justify-content: center;
+    align-content: center;
   }
 }
 
